--- a/CrudLiteDB/Pages/Create.cshtml
+++ b/CrudLiteDB/Pages/Create.cshtml
@@ -2,17 +2,17 @@
 @model CrudLiteDB.Pages.CreateModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Cadastrar";
 }
 
 
-<h2>Create</h2>
+<h2>Cadastrar Clientes</h2>
 <hr />
 
 <form method="post">
-    <input asp-for="Cliente.Nome" placeholder="Name" class="form-control" />
+    <input asp-for="Cliente.Nome" placeholder="Nome" class="form-control" />
     <br>
-    <input asp-for="Cliente.Telefone" placeholder="Description" class="form-control" />
+    <input asp-for="Cliente.Telefone" placeholder="Telefone" class="form-control" />
     <br>
     <button type="submit" class="btn btn-primary">Save</button>
     <a asp-page="index" class="btn btn-link">Back to list</a>
