--- a/CrudLiteDB/Pages/Index.cshtml
+++ b/CrudLiteDB/Pages/Index.cshtml
@@ -22,7 +22,7 @@
     <div class="alert alert-info" role="alert">@TempData["message"]</div>
 }
 
-<a asp-page="create" class="btn btn-success">Create new</a>
+<a asp-page="create" class="btn btn-success">Novo Cliente</a>
 
 <table class="table table-hover">
     <thead>
