--- a/CrudLiteDB/Pages/Create.cshtml
+++ b/CrudLiteDB/Pages/Create.cshtml
@@ -6,7 +6,7 @@
 }
 
 
-<h2>Cadastrar Clientes</h2>
+<h2>Cadastrar Cliente</h2>
 <hr />
 
 <form method="post">
@@ -14,8 +14,8 @@
     <br>
     <input asp-for="Cliente.Telefone" placeholder="Telefone" class="form-control" />
     <br>
-    <button type="submit" class="btn btn-primary">Save</button>
-    <a asp-page="index" class="btn btn-link">Back to list</a>
+    <button type="submit" class="btn btn-primary">Salvar</button>
+    <a asp-page="index" class="btn btn-link">Voltar</a>
 
 </form>
 
