--- a/CrudLiteDB/Pages/Details.cshtml
+++ b/CrudLiteDB/Pages/Details.cshtml
@@ -1,18 +1,16 @@
 ﻿@page
 @model CrudLiteDB.Pages.DetailsModel
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalhes";
 }
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
-<h2>Details</h2>
+<h2>Detalhes</h2>
 <hr>
 
 <div class="panel panel-default">
     <div class="panel-heading">@Model.Cliente.Nome</div>
-    <div class="panel-body">
-        @Model.Cliente.Telefone
-    </div>
+    <div class="panel-body">@Model.Cliente.Telefone</div>
 </div>
-<a asp-page="index" class="btn btn-link">Back to list</a>
+<a asp-page="index" class="btn btn-link">Voltar</a>
 
