--- a/CrudLiteDB/Pages/Edit.cshtml
+++ b/CrudLiteDB/Pages/Edit.cshtml
@@ -2,11 +2,11 @@
 @model CrudLiteDB.Pages.EditModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar";
 }
 
 
-<h2>Edit</h2>
+<h2>Editar</h2>
 <hr />
 
 <form method="post">
@@ -16,7 +16,7 @@
     <br>
     <input asp-for="Cliente.Telefone" placeholder="Description" class="form-control" />
     <br>
-    <button type="submit" class="btn btn-primary">Save</button>
-    <a asp-page="index" class="btn btn-link">Back to list</a>
+    <button type="submit" class="btn btn-primary">Salvar</button>
+    <a asp-page="index" class="btn btn-link">Voltar</a>
 
 </form>
