Alterando nome da propriedade Id

--- a/CrudLiteDB/Pages/Delete.cshtml
+++ b/CrudLiteDB/Pages/Delete.cshtml
@@ -15,7 +15,7 @@
 </div>
 
 <form method="post">
-    <input asp-for="Cliente.Id" hidden />
+    <input asp-for="Cliente.ClienteId" hidden />
     <button type="submit" class="btn btn-danger">Deletar</button>
     <a asp-page="index" class="btn btn-link">Voltar</a>
 </form>
