--- a/CrudLiteDB/Pages/Edit.cshtml
+++ b/CrudLiteDB/Pages/Edit.cshtml
@@ -6,11 +6,11 @@
 }
 
 
-<h2>Editar</h2>
+<h2>Editar Cliente</h2>
 <hr />
 
 <form method="post">
-    <input asp-for="Cliente.Id" hidden />
+    <input asp-for="Cliente.ClienteId" hidden />
 
     <input asp-for="Cliente.Nome" placeholder="Name" class="form-control" />
     <br>
