--- a/CrudLiteDB/Pages/Create.cshtml
+++ b/CrudLiteDB/Pages/Create.cshtml
@@ -5,6 +5,21 @@
     ViewData["Title"] = "Cadastrar";
 }
 
+<head>
+    <script>
+        function somenteNumeros(numero)
+        {
+        var regex = /[^0-9.]/;
+        regex.lastIndex = 0;
+        var campo = numero;
+        if (regex.test(campo.value))
+        {
+            alert("Digite Apenas Numeros");
+            campo.value = "";
+        }
+    }
+    </script>
+</head>
 
 <h2>Cadastrar Cliente</h2>
 <hr />
@@ -12,10 +27,34 @@
 <form method="post">
     <input asp-for="Cliente.Nome" placeholder="Nome" class="form-control" />
     <br>
-    <input asp-for="Cliente.Telefone" placeholder="Telefone" class="form-control" />
+    <input asp-for="Cliente.Telefone" onkeyup="somenteNumeros(this);" placeholder="Telefone" class="form-control" />
     <br>
     <button type="submit" class="btn btn-primary">Salvar</button>
     <a asp-page="index" class="btn btn-link">Voltar</a>
 
 </form>
 
+<form action="#" method="post">
+    <fieldset>
+        <fieldset class="grupo">
+            <div class="campo">
+                <label for="nome">Nome</label>
+                <input type="text" id="nome" name="nome" style="width: 10em" value="">
+            </div>
+            <div class="campo">
+                <label for="snome">Sobrenome</label>
+                <input type="text" id="snome" name="snome" style="width: 10em" value="">
+            </div>
+        </fieldset>        
+        <div class="campo">
+            <label for="email">E-mail</label>
+            <input type="text" id="email" name="email" style="width: 20em" value="">
+        </div>
+        <div class="campo">
+            <label for="telefone">Telefone</label>
+            <input type="text" id="telefone" name="telefone" style="width: 10em" value="">
+        </div>                 
+          
+        <button type="submit" name="submit">Enviar</button>
+    </fieldset>
+</form>
