Add novos campos no modelo e melhorando fiormulario

--- a/CrudLiteDB/Pages/Details.cshtml
+++ b/CrudLiteDB/Pages/Details.cshtml
@@ -5,12 +5,43 @@
 }
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
+
+<head>
+
+    <link href="~/css/main.css" rel="stylesheet" />
+    <link href="~/js/main.js" rel="javascript" />
+
+</head>
+
 <h2>Detalhes</h2>
-<hr>
 
-<div class="panel panel-default">
-    <div class="panel-heading">@Model.Cliente.Nome</div>
-    <div class="panel-body">@Model.Cliente.Telefone</div>
-</div>
-<a asp-page="index" class="btn btn-link">Voltar</a>
+<hr />
 
+<form method="post">
+
+    <fieldset>
+        <input asp-for="Cliente.ClienteId" hidden />
+        <fieldset class="grupo">
+
+            <div class="campo">
+
+                <input asp-for="Cliente.Nome" placeholder="Nome" id="nome" name="nome" value="">
+            </div>
+            <div class="campo">
+                <input asp-for="Cliente.Sobrenome" placeholder="Sobrenome" id="snome" name="snome" value="">
+            </div>
+        </fieldset>
+        <fieldset class="grupo">
+            <div class="campo">
+                <input asp-for="Cliente.Email" placeholder="E-mail" id="email" name="email" value="">
+            </div>
+            <div class="campo">
+                <input asp-for="Cliente.Telefone" onkeyup="somenteNumeros(this);"
+                       placeholder="Telefone" id="telefone" name="telefone" value="">
+            </div>
+        </fieldset>
+
+        <button type="submit" class="botao botao-submit">Salvar</button>
+        <a asp-page="index" class="botao botao-link">Voltar</a>
+    </fieldset>
+</form>
