--- a/CrudLiteDB/Pages/Create.cshtml
+++ b/CrudLiteDB/Pages/Create.cshtml
@@ -2,59 +2,41 @@
 @model CrudLiteDB.Pages.CreateModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
-    ViewData["Title"] = "Cadastrar";
+    ViewData["Title"] = "Cadastro";
 }
 
 <head>
-    <script>
-        function somenteNumeros(numero)
-        {
-        var regex = /[^0-9.]/;
-        regex.lastIndex = 0;
-        var campo = numero;
-        if (regex.test(campo.value))
-        {
-            alert("Digite Apenas Numeros");
-            campo.value = "";
-        }
-    }
-    </script>
+
+    <link href="~/css/main.css" rel="stylesheet" />
+    <link href="~/js/main.js" rel="javascript" />
+
 </head>
 
-<h2>Cadastrar Cliente</h2>
+<h2>Novo Cliente</h2>
 <hr />
 
-<form method="post">
-    <input asp-for="Cliente.Nome" placeholder="Nome" class="form-control" />
-    <br>
-    <input asp-for="Cliente.Telefone" onkeyup="somenteNumeros(this);" placeholder="Telefone" class="form-control" />
-    <br>
-    <button type="submit" class="btn btn-primary">Salvar</button>
-    <a asp-page="index" class="btn btn-link">Voltar</a>
+<form method="post">   
 
-</form>
-
-<form action="#" method="post">
     <fieldset>
         <fieldset class="grupo">
             <div class="campo">
-                <label for="nome">Nome</label>
-                <input type="text" id="nome" name="nome" style="width: 10em" value="">
+                <input asp-for="Cliente.Nome" placeholder="Nome" id="nome" name="nome" value="">
             </div>
             <div class="campo">
-                <label for="snome">Sobrenome</label>
-                <input type="text" id="snome" name="snome" style="width: 10em" value="">
+                <input asp-for="Cliente.Sobrenome" placeholder="Sobrenome" id="snome" name="snome" value="">
             </div>
-        </fieldset>        
-        <div class="campo">
-            <label for="email">E-mail</label>
-            <input type="text" id="email" name="email" style="width: 20em" value="">
-        </div>
-        <div class="campo">
-            <label for="telefone">Telefone</label>
-            <input type="text" id="telefone" name="telefone" style="width: 10em" value="">
-        </div>                 
-          
-        <button type="submit" name="submit">Enviar</button>
-    </fieldset>
+        </fieldset>
+        <fieldset class="grupo">
+            <div class="campo">
+                <input asp-for="Cliente.Email" placeholder="E-mail" id="email" name="email" value="">
+            </div>
+            <div class="campo">
+                <input asp-for="Cliente.Telefone" onkeyup="somenteNumeros(this);"
+                       placeholder="Telefone" id="telefone" name="telefone" value="">
+            </div>
+        </fieldset>
+
+            <button type="submit" class="botao botao-submit">Salvar</button>
+            <a asp-page="index" class="botao botao-link">Voltar</a>
+        </fieldset>
 </form>
