--- a/CrudLiteDB/Pages/Delete.cshtml
+++ b/CrudLiteDB/Pages/Delete.cshtml
@@ -10,6 +10,7 @@
 <hr />
 
 <div class="panel panel-default">
+    <div class="panel-heading">@Model.Cliente.ClienteId</div>
     <div class="panel-heading">@Model.Cliente.Nome</div>
     <div class="panel-body">@Model.Cliente.Telefone</div>
 </div>
